[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
log_level = "INFO"
redis_timeout = 60
testpaths = ["tests"]
python_classes = []
python_files = ["test_*.py"]
timeout = 300
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    '''ignore:pkg_resources is deprecated as an API''',
    '''ignore:Deprecated call to `pkg_resources\.declare_namespace\('.*'\):DeprecationWarning:(fs|pkg_resources).*''',
    '''ignore:Call to deprecated setex:DeprecationWarning:dogpile.*''',
    # potential issue for future upgrades
    # unfortunately it's not possible to filter escape sequence warnings in
    # specific modules, but we should be covered by Ruff for our own code
    '''ignore:"[^"]+" is an invalid escape sequence:::''',
    # FIXME: OGC-2659
    '''ignore:'crypt':DeprecationWarning:passlib.*:''',
    # Until pysaml2 is compatible with newer versions of xmlschema
    # we are stuck with this DeprecationWarning
    # See: https://github.com/IdentityPython/pysaml2/issues/947
    '''ignore:pathlib\.PurePath\.as_uri\(\) is deprecated:DeprecationWarning:xmlschema.*:''',
    # fixed upstream
    '''ignore:datetime\.datetime\.utcnow\(\) is deprecated:DeprecationWarning:depot.*:''',
    '''ignore:(tagMap|typeMap) is deprecated:DeprecationWarning:ldap3.*:''',
]

[tool.coverage.run]
data_file = "/tmp/.coverage"
include = ["*/onegov/*"]
omit = ["*/tests/*"]

[tool.coverage.report]
ignore_errors = true
skip_covered = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "pragma: unreachable",
    "assert_never[(]",
    "@overload",
    "raise NotImplementedError",
    "raise AssertionError[(].unreachable.[)]",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    '''\A(?s:.*# pragma: exclude file.*)\Z'''
]

[tool.mypy]
python_version = "3.14"
follow_imports = "silent"
namespace_packages = true
explicit_package_bases = true
strict = true
implicit_reexport = true
warn_unreachable = true
warn_return_any = false
untyped_calls_exclude = "icalendar"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src:$MYPY_CONFIG_FILE_DIR/stubs"

[[tool.mypy.overrides]]
# ignore missing imports for packages that have no stubs available
module = [
    # FIXME: Remove after https://github.com/gweis/isodate/issues/100
    "isodate.*",
    # FIXME: Remove after https://github.com/lipoja/URLExtract/issues/164
    "urlextract.*",
    # FIXME: Remove after https://github.com/jmcnamara/XlsxWriter/issues/1123
    "xlsxwriter.*"
]
ignore_missing_imports = true


[tool.bandit]
exclude_dirs = [
    "tests",
    "*/**/upgrade.py",
    "*/**/upgrades.py"
]
skips = [
    # ignore asserts
    "B101",
    # ignore meta-codes, we are aware of the implications
    "B403",
    "B404",
    "B405",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
src = ["src", "test", "stubs"]
include = [
    "pyproject.toml",
    "src/**/*.py",
    "tests/**/*.py",
    "stubs/**/*.pyi"
]
line-length = 79
indent-width = 4
target-version = "py314"

[tool.ruff.lint]
select = [
    "stdlib-module-shadowing",
    "ASYNC",
    "B0",
    "raise-without-from-inside-except",
    "loop-iterator-mutation",
    "C4",
    "trailing-comma-on-bare-tuple",
    "D2",
    "escape-sequence-in-docstring",
    "D4",
    "E",
    "F",
    "static-join-to-f-string",
    "FURB",
    "logging-warn",
    "G2",
    "missing-required-import",
    "ISC",
    "LOG",
    "N",
    "PERF",
    "blanket-noqa",
    "invalid-mock-access",
    "PIE",
    "PYI",
    "Q",
    "RUF",
    "SIM",
    "SLOT",
    "T",
    "banned-api",
    "TRY",
    "UP",
    "W"
]
ignore = [
    "unused-loop-control-variable",
    "unnecessary-dict-comprehension-for-iterable",
    "unnecessary-multiline-docstring",
    "blank-line-before-function",
    "blank-line-after-function",
    "incorrect-blank-line-after-class",
    "missing-blank-line-after-summary",
    "new-line-after-last-paragraph",
    "surrounding-whitespace",
    "blank-line-before-class",
    "missing-trailing-period",
    "non-imperative-mood",
    "blank-lines-between-header-and-content",
    "missing-whitespace-around-arithmetic-operator",
    "module-import-not-at-top-of-file",
    "none-comparison",
    "true-false-comparison",
    "ambiguous-variable-name",
    "read-whole-file",
    "write-whole-file",
    "if-exp-instead-of-or-operator",
    # NOTE: We should probably enable this, but we use repeated appends
    #       as a stylistic choice in some cases, extend would add another
    #       level of indentation.
    "repeated-append",
    "slice-copy",
    "reimplemented-starmap",
    "hardcoded-string-charset",
    "verbose-decimal-constructor",
    "meta-class-abc-meta",
    "subclass-builtin",
    "invalid-get-logger-argument",
    "error-suffix-on-exception-name",
    "custom-type-var-for-self",
    "redundant-numeric-union",
    "mutable-class-default",
    "implicit-optional",
    "parenthesize-chained-operators",
    "unsorted-dunder-all",
    "unsorted-dunder-slots",
    "incorrectly-parenthesized-tuple-in-subscript",
    "used-dummy-variable",
    "falsy-dict-get-fallback",
    # TODO: Brings lots of violations, needs cleanup in all __init__.py files
    "non-empty-init-module",
    # TODO: We would like to enable SIM102, but it has a ton of
    #       violations, so it's a big job to clean it up
    "collapsible-if",
    "needless-bool",
    "suppressible-exception",
    "if-else-block-instead-of-if-exp",
    "reimplemented-builtin",
    "in-dict-keys",
    "if-expr-with-true-false",
    "dict-get-with-none-default",
    "raise-vanilla-args",
    "try-consider-else",
    # NOTE: It probably makes sense to enable this, but the refactor
    #       will take a bit of effort.
    "raise-within-try",
    "utf8-encoding-declaration",
    "unnecessary-encode-utf8",
    "f-string",
]
unfixable = []
external = ["TC"]
allowed-confusables = ["×"]
preview = true

[tool.ruff.lint.extend-per-file-ignores]
"src/onegov/core/types.py" = ["useless-expression"]
"reportlab_settings.py" = ["N", "missing-required-import"]
"*/__init__.py" = ["missing-required-import"]
"*.pyi" = [
    "line-too-long",
    "FURB",
    "N",
    "Q",
    # NOTE: We would prefer to set a different target version instead
    #       but there's no per-file-target-version
    "UP",
]
"src/onegov/*/upgrade.py" = [
    "T2",
]
"tests/**/*.py" = [
    "useless-expression",
    "C4",
    "D",
    "blank-line-between-methods",
    "blank-lines-top-level",
    "too-many-blank-lines",
    "blank-line-after-decorator",
    "blank-lines-after-function-or-class",
    "blank-lines-before-nested-definition",
    "unused-variable",
    "static-join-to-f-string",
    "FURB",
    "ISC",
    "N",
    "Q",
    "PERF",
    "blanket-noqa",
    "PIE",
    "PYI",
    "RUF",
    "SIM",
    "T",
    "TRY",
    "UP",
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pep8-naming]
extend-ignore-names = [
    "afterFlowable",
    "HSTORE",
    "sortKey",
    "URL",
    "UUID"
]
classmethod-decorators = [
    # NOTE: We can potentially get rid some of these with SQLAlchemy 2.0
    #       since they should cleanly combine with classmethod
    "declared_attr",
    "expression",
    "comparator",
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
ignore-decorators = ["typing.overload"]

[tool.ruff.lint.flake8-quotes]
avoid-escape = true
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "double"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.ruff]
extend-markup-names = ["chameleon.utils.Markup"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["attr.attrib"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"aiohttp".msg = "We have switched to niquests, please use that instead"
"httpx".msg = "We have switched to niquests, please use that instead"
"requests".msg = "We have switched to niquests, please use that instead"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"
