[metadata]
name = onegov-cloud
version = attr: onegov.core.__version__

[options]
package_dir =
    = src
include_package_data = True
packages =
    onegov.activity
    onegov.agency
    onegov.api
    onegov.async_http
    onegov.ballot
    onegov.chat
    onegov.core
    onegov.directory
    onegov.election_day
    onegov.event
    onegov.feriennet
    onegov.file
    onegov.form
    onegov.foundation
    onegov.foundation6
    onegov.fsi
    onegov.gazette
    onegov.gever
    onegov.gis
    onegov.intranet
    onegov.landsgemeinde
    onegov.newsletter
    onegov.notice
    onegov.onboarding
    onegov.org
    onegov.page
    onegov.pay
    onegov.pdf
    onegov.people
    onegov.qrcode
    onegov.quill
    onegov.recipient
    onegov.reservation
    onegov.search
    onegov.server
    onegov.shared
    onegov.stepsequence
    onegov.swissvotes
    onegov.ticket
    onegov.town6
    onegov.user
    onegov.websockets
    onegov.winterthur
    onegov.wtfs
    onegov.translator_directory
install_requires =
    AIS2.py
    aiohttp
    Pillow
    PyYAML
    alembic
    arrow
    attrs
    babel
    bcrypt
    bjoern
    bleach
    blinker
    bs4
    chameleon
    certifi
    click
    cssmin
    cssutils
    dill
    docxtpl
    dogpile.cache
    dukpy
    editdistance
    elasticsearch>=7.0.0,<8.0.0
    elasticsearch-dsl>=7.0.0,<8.0.0
    email-validator
    faker
    fastcache
    filedepot
    fs
    genshi
    hiredis
    html2text
    html5lib
    humanize
    icalendar
    isodate
    itsdangerous
    jsonpickle
    kerberos
    langdetect
    lazy-object-proxy
    ldap3
    libres>=0.6.1
    libsass
    lxml
    markupsafe
    mistletoe>=1.2.0
    mistune
    more.content_security
    more.transaction
    more.webassets
    more_itertools
    morepath
    msal
    ordered-set
    openpyxl
    passlib
    pdfdocument
    pdfrw2
    pdftotext
    pglast
    phonenumbers
    polib
    psycopg2
    purl
    pycurl
    pyparsing
    pyquery
    qrbill
    qrcode
    py
    pysaml2
    python-dateutil
    python-magic
    python-docx
    python-stdnum
    python-ulid
    pytz
    pyyaml
    rcssmin
    redis
    reportlab
    requests
    rjsmin
    sedate
    sentry_sdk
    sortedcontainers
    sqlalchemy<1.4.0
    sqlalchemy-utils
    sqlparse
    stripe
    svglib
    toposort
    tqdm
    translationstring
    ua-parser
    unidecode
    urlextract
    vobject
    watchdog
    webcolors
    webob
    websockets
    webtest
    werkzeug
    wtforms
    xlrd
    xlsxwriter
    xsdata!=23.5
    xsdata-ech
    xtermcolor
    yubico-client
    zope.sqlalchemy

[options.extras_require]
dev =
    bandit[toml]
    flake8
    # TODO: consider adding flake8-broken-line
    flake8-bugbear
    flake8-comprehensions
    # TODO: consider hosting our own plugin on pypi
    #       or get an equivalent rule added to bandit
    #       for now we pin to a specific commit for safety
    flake8-markupsafe@git+https://github.com/vmagamedov/flake8-markupsafe#egg=b391bd13df9330e01666d304b7f4403d67e5ceba
    flake8-noqa
    flake8-pyi
    flake8-type-checking
    gitpython
    honyaku@git+https://github.com/seantis/honyaku#egg=honyaku
    lingua==3.12
    pre-commit
    pytest-profiling
    pytest-split
    pytest-testmon
    pytest-xdist
    scrambler
mypy =
    dogpile.cache>=1.2.1
    mypy
    sqlalchemy-stubs
    types-babel
    types-beautifulsoup4
    types-bleach
    types-editdistance
    types-html5lib
    types-ldap3
    types-libsass
    types-lxml
    types-openpyxl
    types-passlib
    types-pillow
    types-polib
    types-psutil
    types-psycopg2
    types-pycurl
    types-pysaml2
    types-python-dateutil
    types-pyyaml
    types-pytz
    types-redis
    types-requests
    types-setuptools
    types-stripe
    types-toposort
    types-translationstring
    types-vobject
    types-webob
    typing-extensions
docs =
    alabaster
    docutils
    Jinja2
    sphinx
    sphinx-autoapi
    typing-extensions
    myst-parser
test =
    aiosmtpd
    Pillow
    collection-json
    coverage
    findimports
    freezegun
    lxml
    mirakuru
    mock
    more.itsdangerous
    morepath
    port-for
    psutil
    pyquery
    pytest
    pytest-asyncio
    pytest-localserver
    pytest-redis
    pytest-rerunfailures
    pytest-timeout
    pyyaml
    requests
    requests-mock
    selenium
    splinter
    sqlalchemy
    testing.postgresql
    ulid
    vcrpy
    webdriver-manager
    webob
    webtest

[options.entry_points]
morepath =
    scan = onegov
console_scripts =
    onegov-agency = onegov.agency.cli:cli
    onegov-core = onegov.core.cli:cli
    onegov-election-day = onegov.election_day.cli:cli
    onegov-event = onegov.event.cli:cli
    onegov-feriennet = onegov.feriennet.cli:cli
    onegov-foundation = onegov.foundation6.cli:cli
    onegov-fsi = onegov.fsi.cli:cli
    onegov-gazette = onegov.gazette.cli:cli
    onegov-landsgemeinde = onegov.org.cli:cli
    onegov-org = onegov.org.cli:cli
    onegov-pdf = onegov.pdf.cli:cli
    onegov-people = onegov.people.cli:cli
    onegov-search = onegov.search.cli:cli
    onegov-server = onegov.server.cli:run
    onegov-swissvotes = onegov.swissvotes.cli:cli
    onegov-town6 = onegov.org.cli:cli
    onegov-translator = onegov.translator_directory.cli:cli
    onegov-user = onegov.user.cli:cli
    onegov-websockets = onegov.websockets.cli:cli
    onegov-winterthur = onegov.winterthur.cli:cli
    onegov-wtfs = onegov.wtfs.cli:cli
onegov_upgrades =
    onegov.activity = onegov.activity.upgrade
    onegov.agency = onegov.agency.upgrade
    onegov.ballot = onegov.ballot.upgrade
    onegov.chat = onegov.chat.upgrade
    onegov.core = onegov.core.upgrade
    onegov.directory = onegov.directory.upgrade
    onegov.election_day = onegov.election_day.upgrade
    onegov.event = onegov.event.upgrade
    onegov.feriennet = onegov.feriennet.upgrade
    onegov.file = onegov.file.upgrade
    onegov.form = onegov.form.upgrade
    onegov.foundation = onegov.foundation.upgrade
    onegov.fsi = onegov.fsi.upgrade
    onegov.gazette = onegov.gazette.upgrade
    onegov.gis = onegov.gis.upgrade
    onegov.intranet = onegov.intranet.upgrade
    onegov.landsgemeinde = onegov.landsgemeinde.upgrade
    onegov.newsletter = onegov.newsletter.upgrade
    onegov.notice = onegov.notice.upgrade
    onegov.onboarding = onegov.onboarding.upgrade
    onegov.org = onegov.org.upgrade
    onegov.page = onegov.page.upgrade
    onegov.pay = onegov.pay.upgrade
    onegov.pdf = onegov.pdf.upgrade
    onegov.people = onegov.people.upgrade
    onegov.quill = onegov.quill.upgrade
    onegov.recipient = onegov.recipient.upgrade
    onegov.reservation = onegov.reservation.upgrade
    onegov.search = onegov.search.upgrade
    onegov.shared = onegov.shared.upgrade
    onegov.swissvotes = onegov.swissvotes.upgrade
    onegov.ticket = onegov.ticket.upgrade
    onegov.town6 = onegov.town6.upgrade
    onegov.translator_directory = onegov.translator_directory.upgrade
    onegov.user = onegov.user.upgrade
    onegov.winterthur = onegov.winterthur.upgrade
    onegov.wtfs = onegov.wtfs.upgrade

[flake8]
ignore = E711,E712,W503,E402,E704,E741,B007,E231
extend-select = B904,TC2
per_file_ignores =
    *.pyi: B,C,MS,TC,E301,E302,E305,E501,E701,F401,F403,F405,F822
    tests/**.py: C,MS,NQA104,TC
noqa-require-code = true
