[metadata]
name = onegov-cloud
version = attr: onegov.core.__version__

[options]
package_dir =
    = src
include_package_data = True
packages =
    onegov.activity
    onegov.agency
    onegov.api
    onegov.async_http
    onegov.chat
    onegov.core
    onegov.directory
    onegov.election_day
    onegov.event
    onegov.feriennet
    onegov.file
    onegov.form
    onegov.foundation
    onegov.foundation6
    onegov.fsi
    onegov.gever
    onegov.gis
    onegov.intranet
    onegov.landsgemeinde
    onegov.newsletter
    onegov.onboarding
    onegov.org
    onegov.page
    onegov.parliament
    onegov.pas
    onegov.pay
    onegov.pdf
    onegov.people
    onegov.plausible
    onegov.qrcode
    onegov.quill
    onegov.recipient
    onegov.reservation
    onegov.search
    onegov.server
    onegov.shared
    onegov.stepsequence
    onegov.swissvotes
    onegov.ticket
    onegov.town6
    onegov.user
    onegov.websockets
    onegov.winterthur
    onegov.translator_directory
install_requires =
    AIS2.py
    Pillow
    PyJWT
    PyYAML
    aiohttp
    alembic
    arrow
    attrs
    babel
    # FIXME: OGC-2659
    bcrypt==4.3.0
    bjoern
    bleach
    blinker
    bs4
    chameleon
    certifi
    click
    click-params
    cssmin
    cssutils
    dicttoxml
    dill
    docxtpl
    dogpile.cache
    dukpy
    editdistance
    elasticsearch>=7.17.9,<8.0.0
    elasticsearch-dsl>=7.4.1,<8.0.0
    email-validator
    faker
    feedgen
    filedepot
    firebase-admin
    fs
    genshi
    hiredis
    html2text
    html5lib
    humanize
    icalendar
    isodate
    itsdangerous
    jsonpickle
    kerberos
    lazy-object-proxy
    ldap3
    libres>=0.9.0
    libsass
    lingua-language-detector
    # FIXME: OGC-2363
    lxml<6
    markupsafe
    mistletoe>=1.2.0
    more.content_security
    more.itsdangerous
    more.transaction
    more.webassets
    more_itertools
    morepath
    msal
    oauthlib
    ordered-set
    orjson
    ormsgpack>1.7.0
    openpyxl
    passlib
    pdfdocument
    pdfrw2
    pdftotext
    pglast
    phonenumbers
    polib
    psycopg2
    purl
    pycurl
    pyparsing
    qrbill
    qrcode
    py
    pycountry
    pydantic
    pydantic-extra-types
    pyotp
    pysaml2
    python-dateutil
    python-magic
    python-docx
    python-stdnum
    python-ulid
    pytz
    pyyaml
    rcssmin
    redis
    reportlab
    requests
    requests-oauthlib
    rjsmin
    sedate
    sentry_sdk
    # FIXME: Morepath relies on pkg_resources, which is slated for
    #        removal, we could pin to <81, but then we get a deprecation
    #        message. Hopefully morepath deals with this at some point
    #        so we don't end up locked into Python <3.14
    setuptools<80
    sortedcontainers
    sqlalchemy<1.4.0
    sqlalchemy-utils
    sqlparse
    stripe==12.5.1
    svglib
    toposort
    tqdm
    translationstring
    typing-extensions
    ua-parser[regex]
    unidecode
    urlextract
    vobject
    watchdog
    weasyprint
    webcolors
    webob
    websockets
    webtest
    werkzeug
    wtforms
    xlrd
    xlsxwriter!=3.2.4
    xsdata!=23.5
    xsdata-ech
    yubico-client
    zope.sqlalchemy

[options.extras_require]
dev =
    gitpython
    honyaku@git+https://github.com/seantis/honyaku#egg=honyaku
    pre-commit
    pre-commit-uv
    pytest-profiling
    pytest-split
    pytest-testmon
    pytest-xdist
    scrambler
    uv
lint =
    bandit[toml]
    flake8
    flake8-type-checking
    ruff
mypy =
    dogpile.cache>=1.2.1
    GitPython
    mypy[faster-cache]
    onegov-cloud[test]
    pytest-xdist
    sortedcontainers-stubs
    sqlalchemy-stubs
    types-babel
    types-beautifulsoup4
    types-bleach
    types-editdistance
    types-html5lib
    types-icalendar
    types-ldap3
    types-libsass
    types-lxml
    types-oauthlib
    types-openpyxl
    types-passlib
    types-polib
    types-psutil
    types-psycopg2
    types-pycurl
    types-pysaml2
    types-python-dateutil
    types-pyyaml
    types-pytz
    types-qrbill
    types-qrcode
    types-redis
    types-reportlab
    types-requests
    types-requests-oauthlib
    types-setuptools<71
    types-toposort
    types-translationstring
    types-vobject
    types-waitress
    types-webob
docs =
    sphinx_rtd_theme
    docutils
    Jinja2
    sphinx==8.2.3
    sphinx-autoapi
    typing-extensions
    myst-parser
test =
    aiosmtpd
    collection-json
    coverage
    findimports
    freezegun
    mirakuru
    mock
    port-for
    psutil
    pyquery
    pytest
    pytest-asyncio
    pytest-localserver
    pytest-redis
    pytest-rerunfailures<16.0
    pytest-timeout
    requests-mock
    selenium
    splinter
    testing.postgresql
    ulid
    vcrpy
    webdriver-manager

[options.entry_points]
morepath =
    scan = onegov
console_scripts =
    onegov-agency = onegov.agency.cli:cli
    onegov-core = onegov.core.cli:cli
    onegov-election-day = onegov.election_day.cli:cli
    onegov-event = onegov.event.cli:cli
    onegov-feriennet = onegov.feriennet.cli:cli
    onegov-foundation = onegov.foundation6.cli:cli
    onegov-fsi = onegov.fsi.cli:cli
    onegov-landsgemeinde = onegov.org.cli:cli
    onegov-org = onegov.org.cli:cli
    onegov-people = onegov.people.cli:cli
    onegov-pas = onegov.pas.cli:cli
    onegov-search = onegov.search.cli:cli
    onegov-server = onegov.server.cli:run
    onegov-swissvotes = onegov.swissvotes.cli:cli
    onegov-town6 = onegov.org.cli:cli
    onegov-translator = onegov.translator_directory.cli:cli
    onegov-user = onegov.user.cli:cli
    onegov-websockets = onegov.websockets.cli:cli
    onegov-winterthur = onegov.winterthur.cli:cli
onegov_upgrades =
    onegov.activity = onegov.activity.upgrade
    onegov.agency = onegov.agency.upgrade
    onegov.chat = onegov.chat.upgrade
    onegov.core = onegov.core.upgrade
    onegov.directory = onegov.directory.upgrade
    onegov.election_day = onegov.election_day.upgrade
    onegov.event = onegov.event.upgrade
    onegov.feriennet = onegov.feriennet.upgrade
    onegov.file = onegov.file.upgrade
    onegov.form = onegov.form.upgrade
    onegov.foundation = onegov.foundation.upgrade
    onegov.fsi = onegov.fsi.upgrade
    onegov.gis = onegov.gis.upgrade
    onegov.intranet = onegov.intranet.upgrade
    onegov.landsgemeinde = onegov.landsgemeinde.upgrade
    onegov.newsletter = onegov.newsletter.upgrade
    onegov.onboarding = onegov.onboarding.upgrade
    onegov.org = onegov.org.upgrade
    onegov.page = onegov.page.upgrade
    onegov.parliament = onegov.parliament.upgrade
    onegov.pas = onegov.pas.upgrade
    onegov.pay = onegov.pay.upgrade
    onegov.pdf = onegov.pdf.upgrade
    onegov.people = onegov.people.upgrade
    onegov.quill = onegov.quill.upgrade
    onegov.recipient = onegov.recipient.upgrade
    onegov.reservation = onegov.reservation.upgrade
    onegov.search = onegov.search.upgrade
    onegov.shared = onegov.shared.upgrade
    onegov.swissvotes = onegov.swissvotes.upgrade
    onegov.ticket = onegov.ticket.upgrade
    onegov.town6 = onegov.town6.upgrade
    onegov.translator_directory = onegov.translator_directory.upgrade
    onegov.user = onegov.user.upgrade
    onegov.winterthur = onegov.winterthur.upgrade

[flake8]
select = TC0,TC1
per_file_ignores =
    *.pyi: TC
    tests/**.py: TC
